--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano 2024_</h2>
 <div class="conteudo">
-        <button class="botao">Cursos na Alura</button>
-        <button class="botao">Criar projetos em Javascript</button>
-        <button class="botao">Criar um portfolio</button>
-        <button class="botao">Atualizar meu currículo</button>
+        <button class="botao">tirar carteira</button>
+        <button class="botao">passar de ano</button>
+        <button class="botao">tirar uma nota boa no vestibular </button>
+        <button class="botao">pega mianha moto/carro</button>
  </div>
 </section>
 
