--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button class="botao">passar de ano</button>
         <button class="botao">tirar uma nota boa no vestibular </button>
         <button class="botao">pega mianha moto/carro</button>
+        <button class="botao">junta dinheiro</button>
+        <button class="botao">viajar</button>
  </div>
 </section>
 
