--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="botao">tirar carteira</button>
         <button class="botao">passar de ano</button>
         <button class="botao">tirar uma nota boa no vestibular </button>
-        <button class="botao">pega mianha moto/carro</button>
+        <button class="botao">pega minha moto/carro</button>
         <button class="botao">junta dinheiro</button>
         <button class="botao">viajar</button>
  </div>
